# logoz

./: .dockerignore  .gitignore  Cargo.toml  GITHUB_ISSUES.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SUBMISSION_PR.md  demo.sh  flake.nix  integration-test.toml  scaffold.toml  spel.toml
.cursor/rules/: basecamp.mdc  lgs-cli.mdc
.github/workflows/: ci.yml
batch-anchor/: Cargo.toml  README.md  batch-anchor.toml  docker-compose.yml
batch-anchor/src/: config.rs  main.rs
batch-anchor/src/batch/: mod.rs
batch-anchor/src/cmd/: init.rs  lookup.rs  mod.rs  node.rs  watch.rs
batch-anchor/src/delivery/: client.rs  envelope.rs  mod.rs
batch-anchor/src/registry/: mod.rs  state.rs  types.rs
chronicle_registry_core/: Cargo.toml
chronicle_registry_core/src/: lib.rs
docs/: testnet-v020-anchor-watch-log-20260702.txt  testnet-v020-live-evidence-20260702.md
examples/: Cargo.toml
ffi/: Cargo.toml
ffi/src/: lib.rs
idl/: chronicle-registry.json
logos-chronicle/: CMakeLists.txt  README.md  metadata.json
logos-chronicle/scripts/: logoscore-anchor-smoke.sh  logoscore-broadcast-smoke.sh  logoscore-publish-smoke.sh  logoscore-storage-smoke.sh
logos-chronicle/scripts/lib/: load-integration-config.sh
logos-chronicle/src/: chronicle_anchor_client.cpp  chronicle_anchor_client.h  chronicle_anchor_config.cpp  chronicle_anchor_config.h  chronicle_helpers.cpp  chronicle_helpers.h  chronicle_impl.cpp  chronicle_impl.h  chronicle_interface.h  chronicle_plugin.cpp  chronicle_plugin.h
logos-whistleblower/: CMakeLists.txt  metadata.json
logos-whistleblower/src/: whistleblower.rep  whistleblower_interface.h  whistleblower_plugin.cpp  whistleblower_plugin.h
logos-whistleblower/src/qml/: Main.qml  Theme.qml
logos-whistleblower/src/qml/components/: AnchorConfigDialog.qml  Card.qml  Field.qml  GhostButton.qml  Pill.qml  PrimaryButton.qml  ToastBanner.qml
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/chronicle_registry_core/: Cargo.toml
methods/guest/chronicle_registry_core/src/: lib.rs
scripts/: bench-cu.sh  ci-local.sh  demo.sh  list-registry.sh  run-app.sh  setup.sh
tools/: Cargo.toml
tools/src/: mk_program_binary.rs
