[package]
name = "batch-anchor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "batch-anchor"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
base64     = "0.22"
borsh      = { version = "1", features = ["derive"] }
clap       = { version = "4", features = ["derive", "env"] }
hex        = "0.4"
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
toml       = "0.8"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
