[package]
name = "chronicle_registry-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_idl"
path = "src/bin/generate_idl.rs"

[[bin]]
name = "chronicle_registry_cli"
path = "src/bin/chronicle_registry_cli.rs"

[dependencies]
spel-framework = { path = "../vendor/spel-framework/spel-framework" }
lee_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "27360cb7d6ccb2bfbcca7d171bab8a3938490264", features = ["host"] }
spel = { path = "../vendor/spel-framework/spel-cli" }
chronicle_registry_core = { path = "../chronicle_registry_core" }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "sync", "macros"] }
