[package]
name = "chronicle_registry-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "chronicle_registry"
path = "src/bin/chronicle_registry.rs"

[dependencies]
spel-framework      = { git = "https://github.com/logos-co/spel.git", rev = "73fc462eb8f0a4d00f1a846437c627ec2e523f83" }
nssa_core           = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.1.2" }
risc0-zkvm          = { version = "=3.0.5", features = ["std"] }
chronicle_registry_core = { path = "../../chronicle_registry_core" }
borsh               = { version = "1", features = ["derive"] }
serde               = { version = "1", features = ["derive"] }
ruint               = "=1.17.0"
enum-ordinalize        = "=4.3.2"
enum-ordinalize-derive = "=4.3.2"
