[package]
name = "chronicle_registry-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "chronicle_registry"
path = "src/bin/chronicle_registry.rs"

[dependencies]
spel-framework      = { path = "../../vendor/spel-framework/spel-framework" }
lee_core            = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", rev = "27360cb7d6ccb2bfbcca7d171bab8a3938490264", features = ["host"] }
risc0-zkvm          = { version = "=3.0.5", features = ["std"] }
chronicle_registry_core = { path = "../../chronicle_registry_core" }
borsh               = { version = "1", features = ["derive"] }
serde               = { version = "1", features = ["derive"] }
ruint               = "=1.17.0"
enum-ordinalize        = "=4.3.2"
enum-ordinalize-derive = "=4.3.2"
